@@ -1,3 +1,11 @@
+2024-12-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCicode.c,
+	  support/regression/tests/bug-3799.c:
+	  Fix bug #3800.
+	* support/regression/tests/bug-3013.c:
+	  Test for non-longer-reproducible bug #3013.
+
 2024-12-22 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* device/lib/strtoull.c,
@@ -10,7 +18,7 @@
 	* src/SDCCast.c,
 	  support/regression/tests/structinit.c.in,
 	  .version:
-	  struct / union in initializer, RFE #901.
+	  struct / union in initializer, RFE #901, RFE #797.
 
 2024-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
